# coursera-cpp-mipt

./: .clang-format  .gitignore  CMakeLists.txt  bus_manager.cpp  bus_manager.h  circle_list.cpp  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  deque.h  forward_list.cpp  main.cpp  node.cpp  node.h  old.cpp  parse.cpp  phone_number.cpp  phone_number.h  profile.h  query.cpp  query.h  responses.cpp  responses.h  search_server.cpp  search_server.h  server_stats.cpp  simple_vector.h  stack_vector.h  stats.cpp  stats.h  sum_reverse_sort.cpp  sum_reverse_sort.h  test_db.h  test_runner.cpp  test_runner.h  tests.cpp  tests.h
brown/week1/hash_person/: main.cpp
brown/week1/hashtable/: main.cpp
brown/week1/secondary_index/: main.cpp
brown/week1/set_iterator/: main.cpp
brown/week2/comment_server/: http_response.h  main.cpp  test_runner.h
brown/week2/double_dispatch/: game_object.h  geo2d.cpp  geo2d.h  main.cpp
brown/week2/ini_parser/: ini.cpp  ini.h  main.cpp
brown/week2/ini_reader/: ini.cpp  ini.h  main.cpp
brown/week2/namespace_refactor/: main.cpp  stats_aggreagator_test.cpp  stats_aggreagtor.cpp  stats_aggregator.h  stats_aggregator_test.cpp  test_runner.h
brown/week3/const_concurrency_map/: main.cpp
brown/week3/expression/: Common.h  common.cpp
brown/week3/lazy_value/: main.cpp
brown/week3/pipeline/: main.cpp
brown/week3/polinomial/: main.cpp
brown/week4/cache/: main.cpp  solution.cpp
brown/week4/raii_booking/: booking.h  main.cpp  new_booking_providers.h  new_trip_manager.h  old_booking_providers.h  old_trip_manager.h
brown/week4/textures/: main.cpp  solution.cpp
brown/week4/uniqueptr/: main.cpp
brown/week5/forbidden/: forbidden.cpp
brown/week5/test_domains/: test_domains.cpp
brown/week6/transport/version_a/: base_request.cpp  base_request.h  components.cpp  components.h  main.cpp  parse.h  requests.cpp  response.cpp  response.h  tests.h
brown/week6/transport/version_a1/: main.cpp  test_runner.h
brown/week6/transport/version_a2/: main.cpp
brown/week6/transport/version_b/: main.cpp
brown/week6/transport/version_c/: bus_route.h  main.cpp  request.h  response.h  router.h  tests.h  transport_manager.h  utils.h
brown/week6/transport/version_d/: bus_route.h  debug.h  distance_map.h  json.cpp  json.h  main.cpp  request.h  response.h  segment.h  stop.h  tests.h  utils.h
brown/week6/transport/version_d1/: bus_route.h  json.h  parse.h  point.h  request.h  stop.h
common/: profile.h  test_runner.h
common/xml_parser/: xml.cpp
